--- a/server/views/pages/appearanceUpdatedConfirmation.njk
+++ b/server/views/pages/appearanceUpdatedConfirmation.njk
@@ -11,8 +11,8 @@
     <div class="govuk-grid-row govuk-!-margin-top-4">
         <div class="govuk-grid-column-two-thirds">
             {{ govukPanel({
-                titleText: "Appearance details have been updated",
-                classes: "govuk-!-margin-bottom-6"
+              titleHtml: '<span class="govuk-!-font-size-36">Appearance details have been updated</span>',
+              classes: "govuk-!-margin-bottom-6"
             }) }}
             <div class="govuk-!-margin-top-6">
                 <h2 class="govuk-heading-l">What you can do next</h2>
