--- a/server/views/pages/sentencing/correct-many-period-length.njk
+++ b/server/views/pages/sentencing/correct-many-period-length.njk
@@ -72,7 +72,7 @@
 {% set pageTitle = applicationName + " - Correct many period lengths of same type" %}
 
 {% block pageContent %}
-    <form method="post" action="/person/{{ nomsId }}/{{ addOrEditCourtCase }}/{{ courtCaseReference }}/{{ addOrEditCourtAppearance }}/{{ appearanceReference }}/sentencing/submit-correct-many-period-length?{{ submitQuery }}" autocomplete="off">
+    <form method="post" action="/person/{{ nomsId }}/{{ addOrEditCourtCase }}/{{ courtCaseReference }}/{{ addOrEditCourtAppearance }}/{{ appearanceReference }}/offences/{{chargeUuid}}/submit-correct-many-period-length{{ submitQuery }}" autocomplete="off">
         <input type="hidden" name="_csrf" value="{{ csrfToken }}">
     
         {{ govukRadios({
