--- a/server/views/pages/overallSentencing/overall-conviction-date.njk
+++ b/server/views/pages/overallSentencing/overall-conviction-date.njk
@@ -1,4 +1,4 @@
-{% extends "../../partials/prisonerBannerBackLayout.njk" %}
+{% extends "../../partials/appearanceDetailsLayout.njk" %}
 {% from "govuk/components/button/macro.njk" import govukButton %}
 {% from "govuk/components/date-input/macro.njk" import govukDateInput %}
 {% from "govuk/components/radios/macro.njk" import govukRadios %}
@@ -42,10 +42,8 @@
 
 {% set pageTitle = applicationName + " - Add a court case Overall conviction Date" %}
 
-{% block content %}
+{% block pageContent %}
     {{ super() }}
-    <div class="govuk-grid-row govuk-!-margin-top-4">
-        <div class="govuk-grid-column-two-thirds">
             <form method="post" action="/person/{{ nomsId }}/{{ addOrEditCourtCase }}/{{ courtCaseReference }}/{{ addOrEditCourtAppearance }}/{{ appearanceReference }}/sentencing/submit-overall-conviction-date{{ "?submitToCheckAnswers=true" if submitToCheckAnswers }}" autocomplete="off">
                 <input type="hidden" name="_csrf" value="{{ csrfToken }}">
                 {% include "../../partials/overallWarrantInformationCaption.njk" %}
@@ -91,8 +89,5 @@
                     attributes: {  'data-qa': 'continue-button' }
                 }) }}
             </form>
-
-        </div>
-    </div>
 
 {% endblock %}
