RASS-1437: tests fixed

--- a/server/views/pages/offence/edit-offence.njk
+++ b/server/views/pages/offence/edit-offence.njk
@@ -105,7 +105,7 @@
           visuallyHiddenText: "conviction date",
           classes: "govuk-link--no-visited-state",
           attributes: {
-                    'data-qa': 'enter-conviction-date-' + chargeUuid
+                    'data-qa': 'edit-conviction-date-' + chargeUuid
                   }
         }]
     }
@@ -116,7 +116,7 @@
       value: {
         html: '<a class="govuk-link govuk-link--no-visited-state" href="' + convictionDateHref + '">Enter conviction date</a>',
         attributes: {
-          'data-qa': 'enter-conviction-date-' + chargeUuid
+          'data-qa': 'edit-conviction-date-' + chargeUuid
         }
       }
     }%}
