--- a/server/views/pages/courtCaseDetails.njk
+++ b/server/views/pages/courtCaseDetails.njk
@@ -5,6 +5,7 @@
 {% from "govuk/components/table/macro.njk" import govukTable %}
 {% from "govuk/components/details/macro.njk" import govukDetails %}
 {% from "govuk/components/inset-text/macro.njk" import govukInsetText %}
+{%- from "govuk/components/tag/macro.njk" import govukTag -%}
 
 {% set pageTitle = applicationName + " - Court case details" %}
 
@@ -103,6 +104,15 @@
         classes: "govuk-!-margin-0"
       }) }}
     {% endif %}
+
+<div class="govuk-!-margin-bottom-6">
+{% if appearance.source == 'NOMIS' %}
+    {{ govukTag({
+                      text: "From NOMIS"
+                    }) }}
+                    {% endif %}
+</div>
+
 
     <div class="govuk-grid-row govuk-!-padding-bottom-2 govuk-!-margin-top-2">
         <div class="govuk-grid-column-one-third">
