--- a/server/views/pages/offence/edit-offence.njk
+++ b/server/views/pages/offence/edit-offence.njk
@@ -206,7 +206,7 @@
           visuallyHiddenText: "fine amount",
           classes: "govuk-link--no-visited-state",
           attributes: {
-            'data-qa': 'edit-fine-amount-action'
+            'data-qa': 'edit-fine-amount-' + chargeUuid
           }
         }]
       }
